fix notebook and add nifi template

--- a/spark-notebooks/data_processcing.ipynb
+++ b/spark-notebooks/data_processcing.ipynb
@@ -97,7 +97,7 @@
     "hdfs_path_student_list = \"hdfs://namenode:9000/raw_zone/fact/student_list\"\n",
     "\n",
     "# Read Parquet files from HDFS path into a DataFrame\n",
-    "student_df = spark.read.csv(hdfs_path)\n",
+    "student_df = spark.read.csv(hdfs_path_student_list)\n",
     "\n",
     "# Show the schema of the DataFrame\n",
     "student_df.printSchema()\n",
